- fixed ABI encoder input styles for dark mode - Fixed dark mode styles for various inputs & buttons

--- a/src/components/SearchModal.scss
+++ b/src/components/SearchModal.scss
@@ -317,7 +317,7 @@
     }
 
     .search.result {
-      background-color: colors.$gray-900;
+      background-color: dark.$primary-background-color;
 
       .highlighted {
         background-color: colors.$gray-700;
